Search API Solr search 1.x, dev (xx/xx/xxxx):
---------------------------------------------
- #2064377 by Nick_vh: Made configuration files compatible with Solr Cloud.
- #2107417 by Nick_vh: Fixed config files for Solr 4.5.

Search API Solr search 1.3 (10/23/2013):
----------------------------------------
- #2099683 by drunken monkey: Added support for 'virtual fields' in Views.
- #1997702 by ianthomas_uk, drunken monkey: Added "AUTO" mode for HTTP method.
- #2033913 by drunken monkey: Fixed small error in schema.xml.
- #2073441 by drunken monkey: Removed custom uninstall code for deleting
  dependent servers.
- #1882190 by corvus_ch, arnested, drunken monkey: Added optional index ID
  prefixes.

Search API Solr search 1.2 (09/01/2013):
----------------------------------------
- #1246730 by febbraro, maciej.zgadzaj, drunken monkey: Added a way to alter
  the Solr document when indexing.
- #2053553 by drunken monkey, andrewbelcher: Fixed spatial features with clean
  field identifiers.
- #2054373 by drunken monkey: Added the option to use clean field identifiers.
- #1992806 by drunken monkey: Documented problems with Solr 4.3+.
- #2045355 by drunken monkey, arpieb: Fixed result mapping of item IDs.
- #2050157 by izus: Fixed typo in stopwords.txt.

Search API Solr search 1.1 (07/21/2013):
----------------------------------------
- #1957730 by drunken monkey: Fixed filter query strings for negated filters.
- #2010818 by kenorb, drunken monkey: Added new Files tab showing all used solr
  config files.
- #2042201 by klausi: Fixed timeouts while optimizing Solr server.
- #2034719 by fago: Added raw term to autocompletion response.
- #2027843 by fago, drunken monkey: Made the Solr response available as part of
  the search results.
- #1834614 by drunken monkey: Fixed date fields in MLT queries.
- #1970652 by jsteggink: Fixed highlighting for text fields.
- #2016169 by tomdearden, drunken monkey: Fixed parsing of facets on
  multi-valued fields.